# shoulda

./: CMakeLists.txt  README.md  calltest.cc  compile_commands.json  shoulda.cc
libshoulda/: code_index.cc  code_index.hh  command_line.hh  compilation_database.cc  compilation_database.hh  cursor.cc  cursor.hh  error.cc  error.hh  location.cc  location.hh  translation_unit.cc  translation_unit.hh  util.cc  util.hh
tests/: tests.cc  w.hh
tests/data/: if_braced_body.c  if_condition.c  if_unbraced_body.c  simple_unused_return.c  simple_used_return.c
